# djitter

./: .env  .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml
static/: index.css  login.css  login.js  signup.css
templates/: base.html  generic_form.html  index.html  notification.html  tweet.html  user.html
templates/auth/: login.html  signup.html  splash.html
templates/components/: modal.html  picture_modal.html
twitter/: settings.py  urls.py
twitter_auth/: forms.py  views.py
twitter_notifications/: admin.py  apps.py  context_processors.py  models.py
twitter_notifications/migrations/: 0001_initial.py  0002_notification_unread.py  0003_auto_20210301_2105.py  0004_notification_tweet.py
twitter_tweets/: admin.py  apps.py  forms.py  models.py  views.py
twitter_tweets/migrations/: 0001_initial.py  0002_auto_20210301_1731.py  0003_auto_20210301_1734.py  0004_auto_20210301_1751.py  0005_auto_20210301_1807.py  0006_auto_20210301_1807.py  0007_auto_20210302_1224.py  0008_auto_20210302_1228.py
twitter_user/: admin.py  models.py  views.py
twitter_user/migrations/: 0001_initial.py  0002_auto_20210301_1731.py  0003_auto_20210301_1734.py  0004_auto_20210312_1641.py  0005_auto_20210320_1826.py
