[tool.poetry]
name = "twitterclone-jalondodson"
version = "0.1.0"
description = ""
authors = ["Jalon Dodson <jalon.dodson@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
phonenumbers = "^8.12.19"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
